Fix FB Sdk integration

--- a/packages/HeroTravelerMobile/android/app/src/main/res/values/strings.xml
+++ b/packages/HeroTravelerMobile/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">HeroTravelerMobile</string>
+    <string name="facebook_app_id">1589340484457361</string>
 </resources>
